added content for demos and promotions

--- a/vj_demo.html
+++ b/vj_demo.html
@@ -273,7 +273,7 @@
                                     industrial1</a> </span>
                             </div>
                             <div <p class="tile-description">
-                                Desertion (Phase Fatale Remix) · The Soft Moon 
+                                Desertion (Phase Fatale Remix) · The Soft Moon
                                 </p>
                             </div>
 
@@ -348,111 +348,48 @@
             <section>
                 <div class="tile-group">
 
+                    <!-- PUNTO_ELECTRO_ROBOT1-->
                     <div class="tile-single">
-                        <a target="_blank" href="https://youtu.be/JdCHg8ShYWI"><img class="tile-image"
-                                src="VJ_Demo_Photos/minimal_house1.png"> </a>
+                        <a target="_blank" href="https://www.youtube.com/watch?v=ZQ7Ns5Lt01A"><img class="tile-image"
+                                src="VJ_Demo_Photos/punto_electro1.jpg"> </a>
 
                         <div class=tile-content>
-                            <div <span class="tile-name"> <a target="_blank" href="https://gumroad.com/discover">
-                                    Minimal
-                                    House
-                                    Improv 1</a> </span>
+                            <div <span class="tile-name"> <a target="_blank"
+                                    href="https://www.youtube.com/watch?v=ZQ7Ns5Lt01A">
+                                    punto_electro_1</a> </span>
                             </div>
+                            <div <p class="tile-description">
 
-                            <div <p class="tile-description"> Music is 700louse by Furz </p>
+                                </p>
                             </div>
-
 
                             <div class="tile-links">
-                                <a target="_blank" href="https://gumroad.com/discover"> Gumroad Loop Pack</a>
+                                <a target="_blank" href=""></a>
                             </div>
                         </div>
                     </div>
 
-
+                    <!-- SPECTRUMS DATA FORCES1-->
                     <div class="tile-single">
-                        <a target="_blank" href="https://youtu.be/JdCHg8ShYWI"><img class="tile-image"
-                                src="VJ_Demo_Photos/minimal_house2.png"> </a>
+                        <a target="_blank" href="https://www.youtube.com/watch?v=psZohf9DGxE"><img class="tile-image"
+                                src="VJ_Demo_Photos/spectrums_data_forces1.jpg"> </a>
 
                         <div class=tile-content>
-                            <div <span class="tile-name"> <a target="_blank" href="https://gumroad.com/discover"> Techno
-                                    Minimal
-                                    House Improv 2 Variant 3D version 2 Progr</a> </span>
+                            <div <span class="tile-name"> <a target="_blank"
+                                    href="https://www.youtube.com/watch?v=psZohf9DGxE">
+                                    spectrums_data_forces1</a> </span>
                             </div>
-                            <div <p class="tile-description"> Versions of the Lorem ipsum text have been used in
-                                typesetting
-                                at
-                                least since the 1960s </p>
+                            <div <p class="tile-description">
+
+                                </p>
                             </div>
 
                             <div class="tile-links">
-                                <a target="_blank" href="https://gumroad.com/discover"> Gumroad Loop Pack</a>
+                                <a target="_blank" href=""></a>
                             </div>
                         </div>
                     </div>
 
-                    <div class="tile-single">
-                        <a target="_blank" href="https://youtu.be/JdCHg8ShYWI"><img class="tile-image"
-                                src="VJ_Demo_Photos/minimal_house2.png"> </a>
-
-                        <div class=tile-content>
-                            <div <span class="tile-name"> <a target="_blank" href="https://gumroad.com/discover"> Techno
-                                    Minimal
-                                    House Improv 2 Variant 3D version 2 Progr</a> </span>
-                            </div>
-                            <div <p class="tile-description"> Versions of the Lorem ipsum text have been used in
-                                typesetting
-                                at
-                                least since the 1960s </p>
-                            </div>
-
-                            <div class="tile-links">
-                                <a target="_blank" href="https://gumroad.com/discover"> Gumroad Loop Pack</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="tile-single">
-                        <a target="_blank" href="https://youtu.be/JdCHg8ShYWI"><img class="tile-image"
-                                src="VJ_Demo_Photos/minimal_house2.png"> </a>
-
-                        <div class=tile-content>
-                            <div <span class="tile-name"> <a target="_blank" href="https://gumroad.com/discover"> Techno
-                                    Minimal
-                                    House Improv 2 Variant 3D version 2 Progr</a> </span>
-                            </div>
-                            <div <p class="tile-description"> Versions of the Lorem ipsum text have been used in
-                                typesetting
-                                at
-                                least since the 1960s </p>
-                            </div>
-
-                            <div class="tile-links">
-                                <a target="_blank" href="https://gumroad.com/discover"> Gumroad Loop Pack</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="tile-single">
-                        <a target="_blank" href="https://youtu.be/JdCHg8ShYWI"><img class="tile-image"
-                                src="VJ_Demo_Photos/minimal_house2.png"> </a>
-
-                        <div class=tile-content>
-                            <div <span class="tile-name"> <a target="_blank" href="https://gumroad.com/discover"> Techno
-                                    Minimal
-                                    House Improv 2 Variant 3D version 2 Progr</a> </span>
-                            </div>
-                            <div <p class="tile-description"> Versions of the Lorem ipsum text have been used in
-                                typesetting
-                                at
-                                least since the 1960s </p>
-                            </div>
-
-                            <div class="tile-links">
-                                <a target="_blank" href="https://gumroad.com/discover"> Gumroad Loop Pack</a>
-                            </div>
-                        </div>
-                    </div>
 
 
 
