--- a/vj_demo.html
+++ b/vj_demo.html
@@ -356,7 +356,7 @@
                         <div class=tile-content>
                             <div <span class="tile-name"> <a target="_blank"
                                     href="https://www.youtube.com/watch?v=ZQ7Ns5Lt01A">
-                                    punto_electro_1</a> </span>
+                                    punto_electro1</a> </span>
                             </div>
                             <div <p class="tile-description">
 
