--- a/index.html
+++ b/index.html
@@ -130,8 +130,7 @@
                     <p>
                         <strong> November 15, 2024 </strong>
 
-                        <a href="https://www.mozilla.org/en-US/" title="The best place to find more information about Mozilla's
-                    mission and how to contribute">
+                        <a href="" title="">
                             Punto Electro, Club Kaiku Kammari room, Helsinki, FI</a>
                     </p>
                 </li>
@@ -292,6 +291,123 @@
                     </p>
                 </li>
 
+                <li>
+                    <p>
+                        <strong> September 23, 2023 </strong>
+
+                        <a href="" title="">
+                        </a> Club Kaiku Salonki room, Helsinki, FI
+                    </p>
+                </li>
+
+                <li>
+                    <p>
+                        <strong> September 9, 2023 </strong>
+
+                        <a href="" title="">
+                        </a> Entropy, Helsinki UG, FI
+                    </p>
+                </li>
+
+                <li>
+                    <p>
+                        <strong> September 8, 2023 </strong>
+
+                        <a href="" title="">
+                        </a> Club Kaiku Salonki room, Helsinki, FI
+                    </p>
+                </li>
+
+                <li>
+                    <p>
+                        <strong> August 13, 2023 </strong>
+
+                        <a href="" title="">
+                        </a> Club Kaiku Salonki room, Helsinki, FI
+                    </p>
+                </li>
+
+                <li>
+                    <p>
+                        <strong> August 13, 2023 </strong>
+
+                        <a href="" title="">
+                        </a> Club Kaiku Salonki room, Helsinki, FI
+                    </p>
+                </li>
+
+                <li>
+                    <p>
+                        <strong> August 12, 2023 </strong>
+
+                        <a href="" title="">
+                        </a> Club Kaiku Salonki room, Helsinki, FI
+                    </p>
+                </li>
+
+                <li>
+                    <p>
+                        <strong> August 11, 2023 </strong>
+
+                        <a href="" title="">
+                        </a> Club Kaiku Salonki room, Helsinki, FI
+                    </p>
+                </li>
+
+                <li>
+                    <p>
+                        <strong> July 29, 2023 </strong>
+
+                        <a href="" title="">
+                        </a> Ropecon Diskolarp, Messukeskus, Helsinki, FI
+                    </p>
+                </li>
+
+                <li>
+                    <p>
+                        <strong> July 15, 2023 </strong>
+
+                        <a href="" title="">
+                        </a> Viso Festival, industrial laboratory, Espoo, FI
+                    </p>
+                </li>
+
+                <li>
+                    <p>
+                        <strong> May 14, 2023 </strong>
+
+                        <a href="" title="">
+                        </a> Painemaksimi, Entropy, OK20, Espoo, FI
+                    </p>
+                </li>
+
+                
+                <li>
+                    <p>
+                        <strong> May 6, 2023 </strong>
+
+                        <a href="" title="">
+                        </a> Happotesti, Entropy, Helsinki UG, FI
+                    </p>
+                </li>
+
+                <li>
+                    <p>
+                        <strong> April 7, 2023 </strong>
+
+                        <a href="" title="">
+                        </a> Decompression, Helsinki UG, FI
+                    </p>
+                </li>
+
+                <li>
+                    <p>
+                        <strong> April 8, 2023 </strong>
+
+                        <a href="" title="">
+                        </a> Decompression, Suvilahti Kattilahalli, Helsinki, FI
+                    </p>
+                </li>
 
 
 
