updating events decompression text

--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                         <strong> April 7, 2023 </strong>
 
                         <a href="" title="">
-                        </a> Decompression, Helsinki UG, FI
+                        </a> Helsinki Decompression, Suvilahti Kattilahalli, Helsinki, FI
                     </p>
                 </li>
 
@@ -405,7 +405,7 @@
                         <strong> April 8, 2023 </strong>
 
                         <a href="" title="">
-                        </a> Decompression, Suvilahti Kattilahalli, Helsinki, FI
+                        </a> Helsinki Decompression, Suvilahti Kattilahalli, Helsinki, FI
                     </p>
                 </li>
 
