added a copyright notice

--- a/vj_demo.html
+++ b/vj_demo.html
@@ -398,6 +398,11 @@
         </div>
 
     </div>
+</div>
+
+<div class="footer">
+    <p> © Twilight Courier 2022–2025</p>
+</div>
 
 </body>
 </div>
