added contact email and favicon website icon

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="style.css" />
 <link rel="stylesheet" href="about.css" />
 
-
+<link rel="icon" href="Images/logo.png">
 
 
 
@@ -84,7 +84,7 @@
 
 
 
-            <p class="ev_header"><strong>Live Performances</strong>
+            <p class="ev_header"> <strong>Contact: twilightcourier@p...com </strong> <br><br><strong>Live Performances</strong>
             </p>
 
 
