--- a/vj_demo.html
+++ b/vj_demo.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="style.css" />
 <link rel="stylesheet" href="tile.css" />
 
-
+<link rel="icon" href="Images/logo.png">
 
 
 
