added other services under email

--- a/index.html
+++ b/index.html
@@ -84,7 +84,13 @@
 
 
 
-            <p class="ev_header"> <strong>Contact: twilightcourier@p...com </strong> <br><br><strong>Live Performances</strong>
+            <p class="ev_header"> <strong>Contact: twilightcourier@p...com </strong> <br>
+                Concert Visuals <br>
+                Customized animations to promote your event <br>
+                Specialised audio reactive video loops
+                
+                <br><br>
+                <strong>Live Performances</strong>
             </p>
 
 
