added links to about section and added url hover effect

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <p>
                         <strong> April 5, 2025 </strong>
 
-                        <a href="https://www.mozilla.org/en-US/" title="PuntoElectro">
+                        <a href="https://www.youtube.com/watch?v=e3CcyGKMZUo" title="PuntoElectroRobotSpider">
                             Punto Electro, Club Kaiku Kammari room, Helsinki, FI </a>
                     </p>
                 </li>
@@ -136,7 +136,7 @@
                     <p>
                         <strong> November 15, 2024 </strong>
 
-                        <a href="" title="">
+                        <a href="https://www.youtube.com/watch?v=dIi2pGhSBG4" title="PuntoElectroRobot">
                             Punto Electro, Club Kaiku Kammari room, Helsinki, FI</a>
                     </p>
                 </li>
@@ -265,8 +265,8 @@
                     <p>
                         <strong> November 25, 2023 </strong>
 
-                        <a href="" title="">
-                        </a> Helsinki UG, FI
+                        <a href="https://www.youtube.com/watch?v=URvUoG086Dg" title="ugceiling">
+                        Helsinki UG, FI </a> 
                     </p>
                 </li>
 
