redoing tile-page3

--- a/vj_demo1.html
+++ b/vj_demo1.html
@@ -52,17 +52,18 @@
         <div class="vjdemo_videos">
 
             <div class="tile-group">
-                <div class="tile-group">
-                    <!-- HARDCORE DRAGON 2 -->
-                    <div class="tile-single">
-                        <a target="_blank" href="https://www.youtube.com/watch?v=lLciJDopqYE"><img class="tile-image"
-                                src="VJ_Demo_Photos/dragon_hardcore2.jpg"> </a>
 
-                        <div class=tile-text-content>
-                            <div <span class="tile-title"> <a target="_blank"
-                                    href="https://www.youtube.com/watch?v=lLciJDopqYE">
-                                    dragon_hardcore2</a> </span>
-                            
+
+                <!-- HARDCORE DRAGON 2 -->
+                <div class="tile-single">
+                    <a target="_blank" href="https://www.youtube.com/watch?v=lLciJDopqYE"><img class="tile-image"
+                            src="VJ_Demo_Photos/dragon_hardcore2.jpg"> </a>
+
+                    <div class=tile-text-content>
+                        <div <span class="tile-title"> <a target="_blank"
+                                href="https://www.youtube.com/watch?v=lLciJDopqYE">
+                                dragon_hardcore2</a> </span>
+
 
                             <div <p class="tile-description">
                                 Nosferatu - No God To Us (37 RUFFNECK'S MIX -
@@ -73,36 +74,262 @@
                             <div class="tile-links">
                                 <a target="_blank" href=""> </a>
                             </div>
+
+                        </div>
+                    </div>
+
+
+
+
+
+
+
+
+
+
+                </div>
+
+                <!-- HARDCORE DRAGON 2 -->
+                <div class="tile-single">
+                    <a target="_blank" href="https://www.youtube.com/watch?v=lLciJDopqYE"><img class="tile-image"
+                            src="VJ_Demo_Photos/dragon_hardcore2.jpg"> </a>
+
+                    <div class=tile-text-content>
+                        <div <span class="tile-title"> <a target="_blank"
+                                href="https://www.youtube.com/watch?v=lLciJDopqYE">
+                                dragon_hardcore2</a> </span>
+
+
+                            <div <p class="tile-description">
+                                Nosferatu - No God To Us (37 RUFFNECK'S MIX -
+                                DJ PANIK OLSKOOL HARDCORE CLASSIC'S 95'—97') </p>
                             </div>
-                        </div>
 
 
-
-
-
-
-                    </div>
-
-                    <div class="evpromo_header">
-                        Event PRomotions
-                    </div>
-
-                    <div class="evpromo_videos">
-                        <div class="tile-group">
+                            <div class="tile-links">
+                                <a target="_blank" href=""> </a>
+                            </div>
 
                         </div>
+                    </div>
 
+
+
+
+
+
+
+
+
+
+                </div>
+
+                <!-- HARDCORE DRAGON 2 -->
+                <div class="tile-single">
+                    <a target="_blank" href="https://www.youtube.com/watch?v=lLciJDopqYE"><img class="tile-image"
+                            src="VJ_Demo_Photos/dragon_hardcore2.jpg"> </a>
+
+                    <div class=tile-text-content>
+                        <div <span class="tile-title"> <a target="_blank"
+                                href="https://www.youtube.com/watch?v=lLciJDopqYE">
+                                dragon_hardcore2</a> </span>
+
+
+                            <div <p class="tile-description">
+                                Nosferatu - No God To Us (37 RUFFNECK'S MIX -
+                                DJ PANIK OLSKOOL HARDCORE CLASSIC'S 95'—97') </p>
+                            </div>
+
+
+                            <div class="tile-links">
+                                <a target="_blank" href=""> </a>
+                            </div>
+
+                        </div>
+                    </div>
+
+                </div>
+                            <!-- HARDCORE DRAGON 2 -->
+                <div class="tile-single">
+                    <a target="_blank" href="https://www.youtube.com/watch?v=lLciJDopqYE"><img class="tile-image"
+                            src="VJ_Demo_Photos/dragon_hardcore2.jpg"> </a>
+
+                    <div class=tile-text-content>
+                        <div <span class="tile-title"> <a target="_blank"
+                                href="https://www.youtube.com/watch?v=lLciJDopqYE">
+                                dragon_hardcore2</a> </span>
+
+
+                            <div <p class="tile-description">
+                                Nosferatu - No God To Us (37 RUFFNECK'S MIX -
+                                DJ PANIK OLSKOOL HARDCORE CLASSIC'S 95'—97') </p>
+                            </div>
+
+
+                            <div class="tile-links">
+                                <a target="_blank" href=""> </a>
+                            </div>
+
+                        </div>
+                    </div>
+
+                </div>
+
+                            <!-- HARDCORE DRAGON 2 -->
+                <div class="tile-single">
+                    <a target="_blank" href="https://www.youtube.com/watch?v=lLciJDopqYE"><img class="tile-image"
+                            src="VJ_Demo_Photos/dragon_hardcore2.jpg"> </a>
+
+                    <div class=tile-text-content>
+                        <div <span class="tile-title"> <a target="_blank"
+                                href="https://www.youtube.com/watch?v=lLciJDopqYE">
+                                dragon_hardcore2</a> </span>
+
+
+                            <div <p class="tile-description">
+                                Nosferatu - No God To Us (37 RUFFNECK'S MIX -
+                                DJ PANIK OLSKOOL HARDCORE CLASSIC'S 95'—97') </p>
+                            </div>
+
+
+                            <div class="tile-links">
+                                <a target="_blank" href=""> </a>
+                            </div>
+
+                        </div>
+                    </div>
+
+                </div>
+
+                            <!-- HARDCORE DRAGON 2 -->
+                <div class="tile-single">
+                    <a target="_blank" href="https://www.youtube.com/watch?v=lLciJDopqYE"><img class="tile-image"
+                            src="VJ_Demo_Photos/dragon_hardcore2.jpg"> </a>
+
+                    <div class=tile-text-content>
+                        <div <span class="tile-title"> <a target="_blank"
+                                href="https://www.youtube.com/watch?v=lLciJDopqYE">
+                                dragon_hardcore2</a> </span>
+
+
+                            <div <p class="tile-description">
+                                Nosferatu - No God To Us (37 RUFFNECK'S MIX -
+                                DJ PANIK OLSKOOL HARDCORE CLASSIC'S 95'—97') </p>
+                            </div>
+
+
+                            <div class="tile-links">
+                                <a target="_blank" href=""> </a>
+                            </div>
+
+                        </div>
+                    </div>
+
+                </div>
+                            <!-- HARDCORE DRAGON 2 -->
+                <div class="tile-single">
+                    <a target="_blank" href="https://www.youtube.com/watch?v=lLciJDopqYE"><img class="tile-image"
+                            src="VJ_Demo_Photos/dragon_hardcore2.jpg"> </a>
+
+                    <div class=tile-text-content>
+                        <div <span class="tile-title"> <a target="_blank"
+                                href="https://www.youtube.com/watch?v=lLciJDopqYE">
+                                dragon_hardcore2</a> </span>
+
+
+                            <div <p class="tile-description">
+                                Nosferatu - No God To Us (37 RUFFNECK'S MIX -
+                                DJ PANIK OLSKOOL HARDCORE CLASSIC'S 95'—97') </p>
+                            </div>
+
+
+                            <div class="tile-links">
+                                <a target="_blank" href=""> </a>
+                            </div>
+
+                        </div>
                     </div>
 
                 </div>
 
 
+            </div>
+
+            <div class="evpromo_header">
+                Event PRomotions
+            </div>
+
+            <div class="evpromo_videos">
+                <div class="tile-group">
+       
+                            <!-- HARDCORE DRAGON 2 -->
+                <div class="tile-single">
+                    <a target="_blank" href="https://www.youtube.com/watch?v=lLciJDopqYE"><img class="tile-image"
+                            src="VJ_Demo_Photos/dragon_hardcore2.jpg"> </a>
+
+                    <div class=tile-text-content>
+                        <div <span class="tile-title"> <a target="_blank"
+                                href="https://www.youtube.com/watch?v=lLciJDopqYE">
+                                dragon_hardcore2</a> </span>
 
 
+                            <div <p class="tile-description">
+                                Nosferatu - No God To Us (37 RUFFNECK'S MIX -
+                                DJ PANIK OLSKOOL HARDCORE CLASSIC'S 95'—97') </p>
+                            </div>
 
-                <div class="footer">
-                    <p> © Twilight Courier 2022–2025</p>
+
+                            <div class="tile-links">
+                                <a target="_blank" href=""> </a>
+                            </div>
+
+                        </div>
+                    </div>
+
                 </div>
+
+                                            <!-- HARDCORE DRAGON 2 -->
+                <div class="tile-single">
+                    <a target="_blank" href="https://www.youtube.com/watch?v=lLciJDopqYE"><img class="tile-image"
+                            src="VJ_Demo_Photos/dragon_hardcore2.jpg"> </a>
+
+                    <div class=tile-text-content>
+                        <div <span class="tile-title"> <a target="_blank"
+                                href="https://www.youtube.com/watch?v=lLciJDopqYE">
+                                dragon_hardcore2</a> </span>
+
+
+                            <div <p class="tile-description">
+                                Nosferatu - No God To Us (37 RUFFNECK'S MIX -
+                                DJ PANIK OLSKOOL HARDCORE CLASSIC'S 95'—97') </p>
+                            </div>
+
+
+                            <div class="tile-links">
+                                <a target="_blank" href=""> </a>
+                            </div>
+
+                        </div>
+                    </div>
+
+                </div>
+
+
+                </div>
+
+            </div>
+
+
+
+
+
+
+
+
+
+            <div class="footer">
+                <p> © Twilight Courier 2022–2025</p>
+            </div>
 
 </body>
 </div>
