redoing tile-page10

--- a/vj_demo.html
+++ b/vj_demo.html
@@ -345,7 +345,11 @@
                 </div>
             </div>
         </div>
-        <div class="evpromo_header" id="eventP">
+
+        <div class = "event_promo_link"  id="eventP">
+        </div>
+
+        <div class="evpromo_header">
             Event Promotions
         </div>
 
@@ -400,12 +404,12 @@
 
 
             </div>
-            
+
         </div>
 
-         <div class="footer">
-                <p> © Twilight Courier 2022–2025</p>
-            </div>
+        <div class="footer">
+            <p> © Twilight Courier 2022–2025</p>
+        </div>
 
     </div>
 
