--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>work1</title>
+<title>Twilight Courier</title>
 <meta name="description" content="this is the description">
 <meta name="viewport" content="width=device-width" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -54,7 +54,7 @@
 
 
 
-            <p class="header_email"> <strong>Contact: twilightcourier@proton.me </strong></p>
+            <p class="header_email"> <strong>Contact: twilightcourier[@]proton.me </strong></p>
 
             <p class="service_text">
                 — Concert Visuals <br>
@@ -131,7 +131,7 @@
                         <strong> April 5, 2025 </strong>
 
                         <a href="https://www.youtube.com/watch?v=e3CcyGKMZUo" title="PuntoElectroRobotSpider">
-                            Punto Electro, Club Kaiku Kammari room, Helsinki, FI </a>
+                            Punto Electro, Club Kaiku, Kammari room, Helsinki, FI </a>
                     </p>
                 </li>
 
@@ -154,7 +154,7 @@
                         <strong> November 15, 2024 </strong>
 
                         <a href="https://www.youtube.com/watch?v=dIi2pGhSBG4" title="PuntoElectroRobot">
-                            Punto Electro, Club Kaiku Kammari room, Helsinki, FI</a>
+                            Punto Electro, Club Kaiku, Kammari room, Helsinki, FI</a>
                     </p>
                 </li>
 
@@ -192,7 +192,7 @@
                         <strong> August 24, 2024 </strong>
 
                         <a href="" title="">
-                        </a>Punto Electro, Club Kaiku Kammari room, Helsinki, FI
+                        </a>Punto Electro, Club Kaiku, Kammari room, Helsinki, FI
                     </p>
                 </li>
 
@@ -237,7 +237,7 @@
                         <strong> April 20, 2024 </strong>
 
                         <a href="" title="">
-                        </a> Punto Electro, Club Kaiku Kammari room, Helsinki, FI
+                        </a> Punto Electro, Club Kaiku, Kammari room, Helsinki, FI
                     </p>
                 </li>
 
@@ -273,7 +273,7 @@
                         <strong> January 5, 2024 </strong>
 
                         <a href="" title="">
-                        </a> Punto Electro, Club Kaiku Kammari room, Helsinki, FI
+                        </a> Punto Electro, Club Kaiku, Kammari room, Helsinki, FI
                     </p>
                 </li>
 
@@ -301,7 +301,7 @@
                         <strong> October 28, 2023 </strong>
 
                         <a href="" title="">
-                        </a> Club Kaiku Salonki room, Helsinki, FI
+                        </a> Club Kaiku, Salonki room, Helsinki, FI
                     </p>
                 </li>
 
@@ -319,7 +319,7 @@
                         <strong> September 23, 2023 </strong>
 
                         <a href="" title="">
-                        </a> Club Kaiku Salonki room, Helsinki, FI
+                        </a> Club Kaiku, Salonki room, Helsinki, FI
                     </p>
                 </li>
 
@@ -337,7 +337,7 @@
                         <strong> September 8, 2023 </strong>
 
                         <a href="" title="">
-                        </a> Club Kaiku Salonki room, Helsinki, FI
+                        </a> Club Kaiku, Salonki room, Helsinki, FI
                     </p>
                 </li>
 
@@ -347,7 +347,7 @@
                         <strong> August 13, 2023 </strong>
 
                         <a href="" title="">
-                        </a> Club Kaiku Salonki room, Helsinki, FI
+                        </a> Club Kaiku, Salonki room, Helsinki, FI
                     </p>
                 </li>
 
@@ -356,7 +356,7 @@
                         <strong> August 12, 2023 </strong>
 
                         <a href="" title="">
-                        </a> Club Kaiku Salonki room, Helsinki, FI
+                        </a> Club Kaiku, Salonki room, Helsinki, FI
                     </p>
                 </li>
 
@@ -365,7 +365,7 @@
                         <strong> August 11, 2023 </strong>
 
                         <a href="" title="">
-                        </a> Club Kaiku Salonki room, Helsinki, FI
+                        </a> Club Kaiku, Salonki room, Helsinki, FI
                     </p>
                 </li>
 
