--- a/vj_demo.html
+++ b/vj_demo.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
-<title>work1</title>
-<meta name="description" content="this is the description">
+<title>Twilight Courier</title>
+
+<meta name="description" content="VJ providing concert visuals, customized animations to promote events,
+and specialised audio reactive video loops ">
+<meta name="keywords" content="VJ,Concert Visuals,Resolume, customized promotional animations,
+audio reactive, Club Kaiku, Twilight Courier, twilightcourier, hardcore VJ, speedcore visuals">
+<meta name="author" content="Twilight Courier">
+
 <meta name="viewport" content="width=device-width" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -346,7 +352,7 @@
             </div>
         </div>
 
-        <div class = "event_promo_link"  id="eventP">
+        <div class="event_promo_link" id="eventP">
         </div>
 
         <div class="evpromo_header">
