--- a/index.html
+++ b/index.html
@@ -1,9 +1,26 @@
 <!DOCTYPE html>
 <html>
 <title>Twilight Courier</title>
-<meta name="description" content="this is the description">
+
+<meta name="description" content="VJ providing concert visuals, customized animations to promote events,
+and specialised audio reactive video loops">
+<meta name="keywords" content="VJ,Concert Visuals,Resolume, customized promotional animations,
+audio reactive, Club Kaiku, Twilight Courier, twilightcourier, hardcore VJ, speedcore visuals">
+<meta name="author" content="Twilight Courier">
+
+<meta property=“og:title” content=“Twilight, VJ specialising in visuals for harder styles of electronic music and
+    creating customized animations to promote events” />
+<meta property="og:type" content="website" />
+<meta property="og:image" content="Images/logo.jpg" />
+<meta property=“og:url” content=“https://www.twilightcourier.com” />
+<meta property=“og:description” content=“VJ providing concert visuals, customized animations to promote events, and
+    specialised audio reactive video loops ” />
+
 <meta name="viewport" content="width=device-width" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+
 
 <link rel="stylesheet" href="style.css" />
 <link rel="stylesheet" href="about.css" />
@@ -47,7 +64,8 @@
         <div class="g-container">
 
 
-            <img class="gr_image1" src="Images/about.JPG">
+            <img class="gr_image1" src="Images/about.JPG" alt="Black and white photograph of Twilight Courier against
+            against a wall with stickers and grafitti on it">
 
 
 
@@ -430,7 +448,7 @@
 
 
 
-                
+
 
 
 
