--- a/vj_demo.html
+++ b/vj_demo.html
@@ -8,6 +8,14 @@ and specialised audio reactive video loops ">
 audio reactive, Club Kaiku, Twilight Courier, twilightcourier, hardcore VJ, speedcore visuals">
 <meta name="author" content="Twilight Courier">
 
+<meta property=“og:title” content=“Twilight, VJ specialising in visuals for harder styles of electronic music and
+    creating customized animations to promote events” />
+<meta property="og:type" content="website" />
+<meta property="og:image" content="Images/logo.jpg" />
+<meta property=“og:url” content=“https://www.twilightcourier.com” />
+<meta property=“og:description” content=“VJ providing concert visuals, customized animations to promote events, and
+    specialised audio reactive video loops ” />
+
 <meta name="viewport" content="width=device-width" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
