--- a/vj_demo.html
+++ b/vj_demo.html
@@ -24,11 +24,37 @@ audio reactive, Club Kaiku, Twilight Courier, twilightcourier, hardcore VJ, spee
 
 <link rel="icon" href="Images/logo.png">
 
+<script type="text/javascript" src="js/main.js" defer></script>
+
 
 
 
 
 <body>
+        <div id="consentBox">
+        
+        <div id="consentContent">
+            <header id="consentHeader">
+                  Cookies:
+              </header>
+            <p>
+              If you continue to use this site means you accept Terms and Conditions and Privacy Policy. We use cookies to ensure that we give you the best experience on our website.
+  <a href="your_domain.com/terms">Read terms and conditions</a>
+            </p>
+            <div class="buttons">
+                <button class="consentButton">
+                      Accept Cookies
+                  </button>
+                <button class="rejectButton">
+                      Reject
+                  </button>
+            </div>
+        </div>
+    </div>
+    <script src="script.js"></script>
+
+
+
     <p id="demo"></p>
 
     <script>
