--- a/vj_demo.html
+++ b/vj_demo.html
@@ -38,7 +38,7 @@ audio reactive, Club Kaiku, Twilight Courier, twilightcourier, hardcore VJ, spee
                   Cookies:
               </header>
             <p>
-              If you continue to use this site means you accept Terms and Conditions and Privacy Policy. We use cookies to ensure that we give you the best experience on our website.
+              If you continue to use this site it means you accept the Terms and Conditions and Privacy Policy. This site use cookies to ensure that it provides best experience on the website.
   <a href="your_domain.com/terms">Read terms and conditions</a>
             </p>
             <div class="buttons">
