--- a/vj_demo.html
+++ b/vj_demo.html
@@ -49,6 +49,28 @@ audio reactive, Club Kaiku, Twilight Courier, twilightcourier, hardcore VJ, spee
 
     </div>
 
+    <div id="consentBox">
+        <div id="consentContent">
+            <header id="consentHeader">
+                Cookies
+            </header>
+            <p>
+                We use cookies to make our site work well
+                for you and so we can continually improve it.
+                <br>The cookies that are necessary to
+                keep the site functioning are always on
+            </p>
+            <div class="buttons">
+                <button class="consentButton">
+                    Accept Cookies
+                </button>
+                <button class="rejectButton">
+                    Reject
+                </button>
+            </div>
+        </div>
+    </div>
+    <script src="script.js"></script>
 
 
 
