trying different banner styles2

--- a/index.html
+++ b/index.html
@@ -461,6 +461,8 @@ audio reactive, Club Kaiku, Twilight Courier, twilightcourier, hardcore VJ, spee
         </div>
         <div class="footer">
             <p> © Twilight Courier 2022–2025</p>
+            <a href="privacy.html">Privacy Policy</a>
+            <a href="terms.html"> Terms of Service</a>
         </div>
 
 
