--- a/vj_demo.html
+++ b/vj_demo.html
@@ -55,10 +55,14 @@ audio reactive, Club Kaiku, Twilight Courier, twilightcourier, hardcore VJ, spee
                 Cookies
             </header>
             <p>
-                We use cookies to make our site work well
-                for you and so we can continually improve it.
+                This site uses cookies to make the site work well
+                for you and so it can be continually improved.
                 <br>The cookies that are necessary to
-                keep the site functioning are always on
+                keep the site functioning are always on. You can read more in the 
+                <a href="privacy.html">Privacy Policy</a>
+                and the
+                 <a href="terms.html"> Terms of Service</a>
+                
             </p>
             <div class="buttons">
                 <button class="consentButton">
@@ -451,7 +455,8 @@ audio reactive, Club Kaiku, Twilight Courier, twilightcourier, hardcore VJ, spee
         </div>
 
         <div class="footer">
-            <p> © Twilight Courier 2022–2025</p>
+            <p> © Twilight Courier 2022–2025</p> <a href="privacy.html">Privacy Policy</a>
+            <a href="terms.html"> Terms of Service</a>
         </div>
 
     </div>
