--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ audio reactive, Club Kaiku, Twilight Courier, twilightcourier, hardcore VJ, spee
 
 
 
-
+<link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/hexfont" type="text/css"/> 
 <link rel="stylesheet" href="style.css" />
 <link rel="stylesheet" href="about.css" />
 
@@ -72,7 +72,7 @@ audio reactive, Club Kaiku, Twilight Courier, twilightcourier, hardcore VJ, spee
 
 
 
-            <p class="header_email"> <strong>Contact: twilightcourier[@]proton.me </strong></p>
+            <p class="header_email"> <strong>Contact: twilightcourier[at]proton.me </strong></p>
 
             <p class="service_text">
                 — Concert Visuals <br>
