--- a/privacy.html
+++ b/privacy.html
@@ -45,23 +45,175 @@ audio reactive, Club Kaiku, Twilight Courier, twilightcourier, hardcore VJ, spee
         Users Only of Legal Age of Majority
         Our Site is designed and intended for those who have reached the age of majority (18 years of age). By using our
         Site, you affirm that you are at least 18 years of age or older. We are not liable for any damages that may
-        result from a user's misrepresentation of age.
+        result from a user's misrepresentation of age.<br><br>
 
         No one under age 13 is authorized to submit or post any information, including personally identifying
         information, on our Site. Under no circumstances may anyone under age 13 use our Site. Parents or legal
-        guardians of children under 13 cannot agree to these Terms on their behalf
+        guardians of children under 13 cannot agree to these Terms on their behalf.<br><br>
 
         By using this Site, you consent to the use of information as described in this Privacy Policy. We do update this
         Privacy Policy from time to time so please review this Privacy Policy regularly. If you do not agree with the
-        changes, then you should stop using the Site.
+        changes, then you should stop using the Site.<br><br>
 
         Articles on this site may include embedded content (e.g. videos, images, articles, etc.). Embedded content from
-        other websites behaves in the exact same way as if the visitor has visited the other website.
+        other websites behaves in the exact same way as if the visitor has visited the other website.<br><br>
 
         These websites may collect data about you, use cookies, embed additional third-party tracking, and monitor your
-        interaction with that embedded content, including tracing your interaction with the embedded content
+        interaction with that embedded content, including tracing your interaction with the embedded content<br><br>
 
-        The site might automatically include cookies on your browser</p>
+        The site might automatically include cookies on your browser<br><br>
+
+
+    This privacy policy will explain how Twilight Courier uses the personal data we collect from you when you use our
+    website.<br><br>
+
+
+    Twilight Courier values the privacy of its customers and observes due care in processing and protecting personal
+    data. We conform to the requirements of the applicable data protection legislation.
+    This means we:<br>
+    clearly specify our purposes before we process personal data, by using this Privacy Statement; limit our collection
+    of personal data to only the personal data needed for legitimate purposes; first ask for explicit permission to
+    process your personal data in cases where your permission is required;
+    take appropriate security measures to protect your personal data and we demand the same from parties who process
+    personal data on our behalf;
+    respect your right to inspect, correct or delete your personal data held by us.
+
+    Use of Personal Data<br><br>
+
+    By using our service, you are providing certain data to us. This could be personal data. We only retain and use the
+    personal data provided directly by you or for which it is clear that it has been supplied to us to be processed.<br><br>
+
+    The site does not collect data directly. If you contact me for example via email then I will have your email address
+    and the information included in your email.<br><br>
+
+    Publication<br><br>
+
+    We will not publish your customer data.<br>
+
+    Providing Data to Third Parties<br><br>
+
+    Your data are expressly not provided to any third parties. With the exception of the parties mentioned below.
+    https://www.paypal.com/uk/legalhub/paypal/privacy-full<br>
+
+    This is only relevant if you complete a transaction to me via paypal.<br>
+
+    We only use cookies to store that you have accepted the privacy policy and terms of use of the site.<br>
+
+    No analytics application is being used on this site.<br>
+
+    Security<br><br>
+
+    We take security measures to reduce misuse of and unauthorised access to personal data. We take the following
+    measures in particular:
+
+    Access to personal data requires the use of a user name and password
+    We keep logs of all requests for personal data
+
+    Linked Websites
+
+    This statement is not applicable to third-party websites connected to this website through links.
+
+    Changes to this Privacy Statement
+
+    We reserve the right to modify this statement. We recommend that you consult this statement on a regular basis, so
+    that you remain informed of any changes.
+    Inspection and Modification of your Data
+
+    You can always contact us if you have any questions regarding our privacy policy or wish to review, modify or delete
+    your personal data.
+    Contact information
+    twilightcourier@proton.me
+
+
+    HTTPS
+
+
+    Topics:
+
+    What data do we collect?
+    How do we collect your data?
+    How will we use your data?
+    How do we store your data?
+    Marketing
+    What are your data protection rights?
+    What are cookies?
+    How do we use cookies?
+    What types of cookies do we use?
+    How to manage your cookies
+    Privacy policies of other websites
+    Changes to our privacy policy
+    How to contact us
+    How to contact the appropriate authorities
+
+    What data do we collect?
+
+    Our Company collects the following data:
+
+    This website collects no personal data. If you contact me via email then I will have your email address and any
+    other information that you sent to me in your email. If you contact me via other means I will have the information
+    that you sent to me.
+
+    The site has a cookie to mark if you accepted the privacy policy and terms of the website. The cookie just marks
+    whether it was accepted or not.
+
+
+    How do we collect your data?
+
+    You directly provide Our Company with most of the data we collect. We collect data and process data when you:
+
+    contact me via email or other means
+
+    Our Company may also receive your data indirectly from the following sources:
+    contact me via email or other means
+
+    [Add any indirect source of data your company has]
+
+    How will we use your data?
+
+    Our Company collects your data so that we can:
+
+    Process your order and respond to inquiries.
+
+
+
+    Our Company would like to make sure you are fully aware of all of your data protection rights. Every user is
+    entitled to the following:
+
+
+
+    Cookies
+
+    Cookies are text files placed on your computer to collect standard Internet log information and visitor behavior
+    information. When you visit our websites, we may collect information from you automatically through cookies or
+    similar technology
+
+    How do we use cookies?
+
+    Our Company uses cookies in a range of ways to improve your experience on our website, including:
+
+
+    What types of cookies do we use?
+
+    There are a number of different types of cookies, however, our website uses:
+
+    Functionality – Our Company uses these cookies so that we recognize you on our website and remember your previously
+    selected preferences.
+
+    How to manage cookies
+
+    You can set your browser not to accept cookies, However, in a few cases, some of our website features may not
+    function as a result.
+
+    Privacy policies of other websites
+
+    The Our Company website contains links to other websites. Our privacy policy applies only to our website, so if you
+    click on a link to another website, you should read their privacy policy.
+
+    Changes to our privacy policy
+
+    Our Company keeps its privacy policy under regular review and places any updates on this web page. This privacy
+    policy was last updated on 22 May, 2025.
+    </p>
 
 </body>
 
